# projects_cicd

./: README.txt
kar/: CMakeLists.txt  Dockerfile  Jenkinsfile  docker-compose.yml
klav/: CMakeLists.txt  Dockerfile  Jenkinsfile  docker-compose-build.yml  docker-compose.yml  hosts
raz/: CMakeLists.txt  Dockerfile  Jenkinsfile  docker-compose.yml
vit/: CMakeLists.txt  Dockerfile  Jenkinsfile  docker-compose-build.yml  docker-compose.yml
